searx/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment
spec:
  replicas: 1
  strategy:
    type: Recreate
  template:
    spec:
      containers:
      - name: searx
        image: searx
        imagePullPolicy: Always
        resources:
          limits:
            cpu: "800m"
            memory: "500Mi"
          requests:
            cpu: "150m"
            memory: "200Mi"
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: vol
          mountPath: /etc/searxng
      volumes:
      - name: vol
        persistentVolumeClaim:
          claimName: pvc
